# Synth_project

./: CMakeLists.txt  MyStream.cpp  MyStream.h  README.md  Soundwave.cpp  Soundwave.h  input_base.h  main.cpp  note_data.h  sound_modifier_data.h
